examples/hello-app/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-app
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
