examples/hello-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: hello-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
